# Orbit-Cpp

./: AUTHORS  CMakeLists.txt  Makefile  body.cpp  body.h  diagnosticdialog.cpp  diagnosticdialog.h  diagnosticdialog.ui  importdata.cpp  importdata.h  importdata.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planetdata.cpp  planetdata.h  propertiesfile.cpp  propertiesfile.h  rk4.cpp  rk4.h  scale.h  scene.cpp  scene.h  system.cpp  system.h  trajectory.cpp  trajectory.h  vector3.cpp  vector3.h  verlet.cpp  verlet.h
data/: 2004n1.txt  adrastea.txt  aitne.txt  amalthea.txt  ananke.txt  aoede.txt  arche.txt  ariel.txt  autonoe.txt  belinda.txt  bennu.txt  bianca.txt  caliban.txt  callirrhoe.txt  callisto.csv  callisto.txt  carme.txt  carpo.txt  ceres.csv  ceres.txt  chaldene.txt  charon.txt  cordelia.txt  cressida.txt  cupid.txt  cyllene.txt  deimos.txt  desdemona.txt  despina.txt  dione.csv  dione.txt  earth.csv  earth.txt  elara.txt  enceladus.csv  enceladus.txt  epimetheus.txt  erinome.txt  eros.txt  euanthe.txt  (+118 more)
diagnostics/: abs_error.txt  angles.csv  anim_pos.py  delta.csv  dist.csv  error_pos.csv  plot_angles.py  plot_delta.py  plot_dist.py  plot_pos.py  plot_velocity.py  pos_ref.csv  pos_sim.csv  ref_velocity.csv  sim_velocity.csv
download-horizons/: download-horizons.py
physical_properties/: properties.csv
python/: plot_dist.py
